<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/imageView"
            android:layout_width="155dp"
            android:layout_height="154dp"
            android:layout_marginTop="80dp"
            android:theme="@style/CircularImageViewStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/avatar" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="104dp"
            app:fabSize="auto"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_edit_black_18dp" />

        <LinearLayout
            android:layout_width="346dp"
            android:layout_height="480dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

            <TextView
                android:id="@+id/nameDescriptionView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nameDescriptionView"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:focusable="false"
                android:hint="@string/nameHint"
                app:boxBackgroundColor="#5e5e76">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editNameTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:focusable="false" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/phoneDescriptionView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phoneDescriptionView"
                android:textSize="16sp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phoneView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:focusable="false"
                android:hint="@string/phoneHint"
                app:boxBackgroundColor="#5e5e76"
                app:hintAnimationEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editPhoneView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:focusable="false" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/emailDescriptioNView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/emailDescriptionView"
                android:textSize="16sp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:focusable="false"
                android:hint="@string/emailHint"
                app:boxBackgroundColor="#5e5e76"
                app:hintAnimationEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editEmailView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:focusable="false" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/descriptionDescriptionView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/descriptionDescriptionView"
                android:textSize="16sp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/descriptionView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="false"
                android:hint="@string/descriptionHint"
                app:boxBackgroundColor="#5e5e76"
                app:hintAnimationEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editDescriptionView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:editable="false"
                    android:focusable="false"
                    android:scrollbars="vertical" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>